Fix close modal button inaccesible on mobile

--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -25,31 +25,45 @@
         width: 28px;
         height: 28px;
         position: absolute;
-        top: -35px;
-        right: 0;
+        top: 2px;
+        right: 4px;
+        z-index: 2000;
         cursor: pointer;
         transition: transform .5s;
+
+        @include mq(tablet-sm) {
+            top: -35px;
+            right: 0;
+        }
     
         &::after {
             content: "";
             position: absolute;
             right: 0;
-            background-color: white;
+            background-color: #444444;
             height: 3px;
             width: 100%;
             transform: rotate(45deg);
             border-radius: 2px;
+
+            @include mq(tablet-sm) {
+                background-color: white;
+            }
         }
     
         &::before {
             content: "";
             position: absolute;
             right: 0;
-            background-color: white;
+            background-color: #444444;
             height: 3px;
             width: 100%;
             transform: rotate(-45deg);
             border-radius: 2px;
+
+            @include mq(tablet-sm) {
+                background-color: white;
+            }
         }
 
         &:hover {
